# 2GD11E_Cremers_Liam_SE_Pokedex

./: .gitignore  CMakeLists.txt  PokedexParser.h  PokedexParserJsoncpp.cpp  PokedexParserNlohmann.cpp  README.md  main.cpp
cmake/: fmt_config.cmake  jsoncpp.cmake  nlohmann_simple.cmake
content/: pokedex.json
